about.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');

body {
    margin: 0;
    font-family: "Nunito", sans-serif;
}

.main-container {
    justify-content: center;
}

nav {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: #c8b09e;
    width: 100%;
}

li, a{
    font-weight: 500;
    font-size: 30px;
    color: white;
    text-decoration: none;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav_links {
    list-style: none;
    text-align: center;
    padding: 10px;
}

.nav_links li {
    display: inline;
    padding: 0px 20px;
}

.fixed-image {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 80vh;
    z-index: -2;
    background: url('/images/beach.jpg') no-repeat center center;
    background-size: cover;
    
}

.blur-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 150vh;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(0.5px);
    z-index: -1;
}

.centered-text {
    position: relative;
    text-align: center;
    z-index: 0;
    padding-top: 20px;
    padding-bottom: 20px;
    font-weight: 1000;
    font-size: 70px;
    color: #846C5F;
    text-decoration: none;
}

.lower-container-2 {
    height: 900px;
    background: #d9bda3;
    gap: 20px;
}

.lower-container-2 #name-logo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 35%;
}
#carson-secrest-white {
    cursor: pointer;
}
#computer-science-brown {
    cursor: pointer;
}

#my-images-container {
    display: block;
    justify-content: center;
    align-items: center;
    height: 65%;
}
#images-description {
    height: 20%;
}
#images-description h3 {
    color: white;
    text-align: center;
    font-size: 40px;
    height: 100%;
}
#image-carousel {
    height: 60%;
}

/* Image carousel animations */
@keyframes carousel {
    0% {
        transform: translateX(1500px);
    }
    100% {
        transform: translateX(-1500px);
    }
}
.carousel-images {
    display: inline-block;
    height: 300px;
}
#image-1 {
    position: relative;
    animation: carousel linear 20s infinite;
}
#image-2 {
    position: relative;
    animation: carousel linear 20s infinite;
    animation-delay: 0s;
}
#image-3 {
    position: absolute;
    animation: carousel linear 20s infinite;
    animation-delay: 0s;
}
#image-4 {
    position: absolute;
    animation: carousel linear 20s infinite;
    animation-delay: 0s;
}

.lower-container-1 {
    height: 900px;
    background: #d9bda3;
    gap: 20px;
}

.lower-container-1 h1 {
    margin-bottom: 20px;
    font-size: 90px;
    text-align: center;
    color: white;
    margin-top: 0px;
}

.lower-container-1 hr {
    width: 40%;
    height: 4px;
    border: none;
    background-color: white;
    border-radius: 20px;
    margin-bottom: 30px;
}

.chart-container {
    display: flex;
    justify-content: center;
}

.course-lists {
    display: inline;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 0px;
    transition: all 1.5s cubic-bezier(0.61, 1, 0.88, 1);
}

.course-lists h2 {
    width: 75%;
    margin: 0;
    font-size: 60px;
    color: white;
    text-align: center;
}

.chart-container ul {
    width: 100%;
    height: 560px;
}

.fade-in {
    animation: fade-in 1s ease-in-out 0s;
}

/* class not in html, only for animation */
.fade-out {
    animation: fade-out 0.5s ease-in-out 0s;
    animation-fill-mode: forwards;
}

/* animations for fading in and out course lists */
@keyframes fade-in {
    to { opacity: 1 }
    from { opacity: 0 }
}
@keyframes fade-out {
    to { opacity: 0 }
    from { opacity: 1 }
}

#chart {
    height: 600px;
    width: 600px;
    margin-top: 10px;
}

/* chart fonts */
#chart text {
    font-size: 15px;
}
td.name {
    font-size: 30px;
}

#beaver-image {
    position: absolute;
    z-index: 99;
    width: 40%;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    pointer-events: none;
}

.rotate {
    animation: rotate 1.5s ease-in-out;
}

@keyframes rotate {
    to { rotate: 360deg }
    from { rotate: 0deg }
}

/*****************************************************/

.achievement *{
box-sizing: border-box;
}

.achievement {
position: absolute;
pointer-events: none;
width: 100%;
bottom: -100px;
z-index: 100;
}

@keyframes flip {
0% {
    transform: rotateY(0deg);
}
50% {
    transform: rotateY(360deg);
}   
100% {
    transform: rotateY(0deg);
}
}

@keyframes scale_circle_1 {
0% {
    transform: scale3d(0, 0, 0);
}
2% {
    opacity: 1;
}
5% {
    transform: scale3d(2, 2, 2);
    opacity: 0.8;
}
6% {
    opacity: 0;
}
9% {
    opacity: 0;
}
10% {
    transform: scale3d(2, 2, 2);
    opacity: 0;
}
90% {
    transform: scale3d(0, 0, 0);
}
92% {
    opacity: 1;
}
95% {
    transform: scale3d(2, 2, 2);
    opacity: 0.8;
}
96% {
    opacity: 0;
}
99% {
    opacity: 0;
}
100% {
    transform: scale3d(2, 2, 2);
    opacity: 0;
}
}

@keyframes circle_grow_move {
1% {
    opacity: 0;
    transform: scale(0.2);
}
4% {
    transform: scale(2.2);
}
5% {
    transform: scale(2);
    opacity: 1;
}
11% {
    transform: translate(0);
    background-color: #39960C;
}
24% {
    transform: translateX(-280px);
    background-color: #42ae0e;
}
85% {
    transform: translateX(-280px);
    background-color: #42ae0e;
}
89% {
    transform: translateX(0);
    background-color: #39960C;
}
94% {
    transform: scale(2);
}
96% {
    transform: scale(2.2);
}
98% {
    transform: scale(0.2);
    opacity: 1;
}
99% {
    opacity: 0;
}
100% {
    transform: scale(0.2);
}
}



@keyframes trophy_animate_opacity {
0% {
    opacity: 0;
}
20% {
    opacity: 0;
}
24% {
    opacity: 1;
}
90% {
    opacity: 1;
}
95% {
    opacity: 0;
}
100% {
    opacity: 0;
}
}

@keyframes xbox_animate_opacity {
0% {
    opacity: 1;
}
19% {
    opacity: 1;
    transform: scale3d(1,1,1);
}
23% {
    opacity: 0;
}
90% {
    opacity: 0;
}
95% {
    opacity: 1;
}
100% {
    opacity: 1;
}
}

@keyframes banner-animate {
0% {
    width: 150px;
    opacity: 0;
}
2% {
    opacity: 0;
}
4% {
    opacity: 1;
}
11% {
    width: 150px;
}
24% {
    width: 710px;
}
85% {
    width: 710px;
}
89% {
    width: 150px;
    opacity: 1;
}
90% {
    opacity: 0;
}
}

@keyframes textSlide {
0% {
    transform: translateY(85px);
    opacity: 0;
}
20% {
    transform: translateY(85px);
    opacity: 0;
}
25% {
    transform: translateY(0);
    opacity: 1;
}
79% {
    transform: translateY(0);
    opacity: 1;
}
84% {
    transform: translateY(-115px);
    opacity: 0;
}
100% {
    opacity: 0;
}
}

.animation {
width: 710px;
height: 220px;
padding: 10px 0px 10px 0px;
position: relative;
margin: auto;
display: -ms-flexbox;
display: flex;
-ms-flex-wrap: wrap;
flex-wrap: wrap;
-ms-flex-align: center;
align-items: center;
-ms-flex-pack: center;
justify-content: center;
}

.circle.circle_animate {
animation: circle_grow_move;
animation-duration: 10.5s;
transform-origin: center;
}

.circle.circle_animate::before {
animation: scale_circle_1;
animation-duration: 10.5s;
transform-origin: center;
animation-iteration-count: 2;
}

.circle.circle_animate::after {
animation: scale_circle_1;
animation-duration: 10.5s;
animation-delay: 0.1s;
transform-origin: center;
}

.circle.circle_animate .trophy_animate {
animation: trophy_animate_opacity;
animation-duration: 10.5s;
}

.circle.circle_animate .xbox_img {
animation: xbox_animate_opacity;
animation-duration: 10.5s;
z-index: 102;
}

.rare .trophy_img{
display: none;
}

.circle {
width: 150px;
height: 150px;
top: 0;
opacity: 0;
margin: 0 auto;
border-radius: 100%;
background: #39960C;
position: relative;
overflow: hidden;
z-index: 4;
}

.circle::before {
content: "";
opacity: 0;
width: 150px;
height: 150px;
background-color: #40a90e;
position: absolute;
top: 0;
left: 0;
border-radius: 50%;
display: block;
}

.circle::after {
content: "";
opacity: 0;
width: 150px;
height: 150px;
background-color: #32830a;
position: absolute;
top: 0;
left: 0;
border-radius: 50%;
display: block;
}

.rare .circle::after{
z-index: -1;
}

.rare  .circle::before{
z-index: -1;
}

.circle .img {
height: 50%;
left: 25%;
top: 25%;
position: absolute;
z-index: 100;
}

.circle .img img {
height: 100%;
position: absolute;
}

.circle .trophy_1 {
animation: flip;
animation-duration: 6s;
animation-iteration-count: infinite;
}

.achieve_disp_animate {
animation: textSlide;
animation-duration: 10.5s;
}

.banner {
width: 710px;
height: 150px;
position: relative;
left: 0;
opacity: 0;
display: -ms-flexbox;
display: flex;
-ms-flex-direction: column;
flex-direction: column;
-ms-flex-align: center;
align-items: center;
-ms-flex-pack: center;
justify-content: center;
right: 0;
margin: 0 auto;
background: #39960C;
overflow: hidden;
border-radius: 200px;
}


.banner-outer {
display: -ms-flexbox;
display: flex;
-ms-flex-align: center;
align-items: center;
-ms-flex-line-pack: center;
align-content: center;
width: 100%;
top: -150px;
position: relative;
}

.banner.banner-animate {
animation: banner-animate;
animation-duration: 10.5s;
}

.achieve_name::before,
.achieve_score::before {
display: none !important;
opacity: 0;
content: "";
}

.achieve_name::after,
.achieve_score::after {
display: none;
content: "";
}

.achieve_disp {
display: -ms-flexbox;
display: flex;
-ms-flex-direction: column;
flex-direction: column;
width: 60%;
position: absolute;
-ms-flex-pack: center;
justify-content: center;
margin-left: 190px;
left: 0;
height: 100%;
top: 0;
}

.achieve_disp input {
opacity: 1 !important;
}

.achieve_disp .score_disp {
width: 100%;
display: -ms-flexbox;
display: flex;
-ms-flex-direction: row;
flex-direction: row;
-ms-flex-align: start;
align-items: flex-start;
margin-bottom: 0 !important;
}

.achieve_disp .achiev_name {
border: none;
outline: none;
background: none;
font-size: 26pt;
color: white;
line-height: 48px;
overflow: hidden;
white-space: nowrap;
text-overflow: ellipsis;
}

.acheive_score {
margin-left: 10px;
margin-right: 10px;
color: white;
}

.unlocked {
width: 100%;
color: white;
font-weight: 400;
}

.gamerscore {
display: -ms-flexbox;
display: flex;
-ms-flex-direction: row;
flex-direction: row;
-ms-flex-align: center;
align-items: center;
height:48px;
}

.gamerscore input {
margin-left: 10px;
width: 30px;
margin-right: 10px;
background: none;
outline: none;
border: none;
color: white;
overflow: visible;
font-family: 'open sans', sans-serif;
font-weight: bold;
font-size: 26pt;
}

.hyphen_sep {
margin-right: 5px;
color: white;
font-size: 30pt;
line-height: 48px;
}

.rare .brilliant-wrap{
display: block;
}

.brilliant-wrap{
display: none;
height: 150px;
width: 150px;
border-radius: 50%;
overflow: hidden;
z-index: 101;
animation: brilliant-wrap 10s ease-in-out;
opacity: 0;
}

.brilliant {
height: 150px;
width: 150px;
background-image: url('https://dl.dropboxusercontent.com/s/ocn6nk0102mtiwq/spritesheet.png');
background-size: 22050px 150px;
background-position: right;
animation: brilliant 7.4s steps(147) 2s;
}

@keyframes brilliant {
0% {
    background-position: 0;
}
100% {
    background-position: -22050px;
}
}

@keyframes brilliant-wrap{
0%, 20%{
    opacity: 0;
}
20.00001%{
    opacity: 1;
}
90% {
    opacity: 1;
}
95%{
    opacity: 0;
}
}

